--- a/html/index.html
+++ b/html/index.html
@@ -9,31 +9,45 @@
 </head>
 <body>
 <div>
-
-            <div>TM</div>
-            <div>Pre-order now</div>
-            <div>Typemaster Keyboard</div>
-            <div>Improve your productivity and gaming without breaking the bank. Upgrade to a high quality mechanical typing experience.</div>
-            <div>Pre-order now</div>
-            <div>Release on 5/27</div>
-            <div><img  src="..\media\image-keyboard.jpg" alt="picture of keyboard"></div>
-            <div><img  src="..\media\image-phone-and-keyboard.jpg" alt="picture of image-phone-and-keyboard.jpg"></div>
-            <div><img  src="..\media\image-glass-and-keyboard.jpg" alt="picture of image-glass-and-keyboard.jpg"></div>
-            <div>mechanical wireless Keyboard</div>
-            <div>The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety of switches and keycaps, along with reliable wireless connectivity.</div>
-            <div></div>
-            <div>HIGHLY COMPATIBLE</div>
-            <div>Easy to use and works well with all major computer brands, gaming consoles and mobile devices. Plug & play, no installation or driver needed.</div>
-            <div></div>
-            <div>WIRELESS WITH BLUETOOTH</div>
-            <div></div>
-            <div>Powerful 2.4G RF technology allows you to connect the cordless keyboard from up to 30ft away. Simply plug the unifying receiver into your computer.</div>
-            <div></div>
-            <div>HIGH CAPACITY BATTERY</div>
-            <div>Equipped with a long-lasting built-in battery, you’ll never have to spend a dime on replaceable ones. Enjoy 40 hours of usage time between charges.</div>
-            <div></div>
-            <div>RGB BACKLIT MODES</div>
-            <div>Choose from 4 backlight brightness levels and adjustable breathing speed. Each key glows intensely in the dark and helps you type in low light conditions.</div>
+         <div class="trade_mark">
+            <div id="trade_mark">TM </div>
+            <div id="P_order">Pre-order now</div>
+         </div>
+         <div class="Typemaster">
+            <div id="Type_master"><h1>Typemaster Keyboard</h1></div>
+            <div id="Typemaster1">Improve your productivity and gaming without breaking the bank. Upgrade to a high quality mechanical typing experience.</div>
+            <div id="order">Pre-order now</div>
+            <div id="order1">Release on 5/27</div>
+         </div class="keyboard">
+            <div id="keyboard"><img  src="..\media\image-keyboard.jpg" alt="picture of keyboard" style="width:80%;   border-radius :2vw;"></div>
+         <div class="phone">   
+            <div id="phone"><img  src="..\media\image-phone-and-keyboard.jpg" alt="picture of image-phone-and-keyboard.jpg" style="width:50%; fill: #F16718;"></div>
+            <div id="glass"><img id="glass_k"  src="..\media\image-glass-and-keyboard.jpg" alt="picture of image-glass-and-keyboard.jpg" style="width:50%"></div>
+        </div> 
+        <div  class="mech">  
+            <div><h1 style="text-transform: capitalize;  font-size: xxx-large; text-align: center;">mechanical wireless Keyboard</h1></div>
+            <div  style="text-align:center ;   ">The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety of switches and keycaps, along with reliable wireless connectivity.</div>
+        </div>
+        <div> 
+            <div class="icon"><img id="icon" src="..\media\monitor.svg" alt="picture of monitor icon"></div>
+            <div class="icon_words"><h3>HIGHLY COMPATIBLE</h3></div>
+            <div class="words">Easy to use and works well with all major computer brands, gaming consoles and mobile devices. Plug & play, no installation or driver needed.</div>
+        </div>
+        <div>   
+            <div class="icon"><img id="icon" src="..\media\bluetooth.svg" alt="picture of bluetooth icon"></div>
+            <div class="icon_words"><h3>WIRELESS WITH BLUETOOTH</h3></div>
+            <div class="words">Powerful 2.4G RF technology allows you to connect the cordless keyboard from up to 30ft away. Simply plug the unifying receiver into your computer.</div>
+        </div> 
+        </div>  
+            <div class="icon"><img id="icon" src="..\media\battery.svg" alt="picture of battery icon"></div>
+            <div class="icon_words"><h3>HIGH CAPACITY BATTERY</h3></div>
+            <div class="words">Equipped with a long-lasting built-in battery, you’ll never have to spend a dime on replaceable ones. Enjoy 40 hours of usage time between charges.</div>
+        </div>
+        </div> 
+            <div class="icon"><img id="icon" src="..\media\bulb.svg" alt="picture of bulb icon"></div>
+            <div class="icon_words"><h3>RGB BACKLIT MODES</h3></div>
+            <div class="words">Choose from 4 backlight brightness levels and adjustable breathing speed. Each key glows intensely in the dark and helps you type in low light conditions.</div>
+        </div>   
             <div>Typemaster 2021  |  All Rights Reserved</div>
             <div></div>
             
