--- a/html/index.html
+++ b/html/index.html
@@ -9,24 +9,23 @@
 </head>
 <body>
 <div>
-         <div class="trade_mark">
-            <div id="trade_mark">TM </div>
-            <div id="P_order">Pre-order now</div>
-         </div>
-         <div class="Typemaster">
-            <div id="Type_master"><h1>Typemaster Keyboard</h1></div>
-            <div id="Typemaster1">Improve your productivity and gaming without breaking the bank. Upgrade to a high quality mechanical typing experience.</div>
-            <div id="order">Pre-order now</div>
-            <div id="order1">Release on 5/27</div>
-         </div class="keyboard">
-            <div id="keyboard"><img  src="..\media\image-keyboard.jpg" alt="picture of keyboard" style="width:80%;   border-radius :2vw;"></div>
+    <div class="trade_mark">
+                    <div id="trade_mark">TM </div>
+                    <div id="P_order">Pre-order now</div>
+                    <div id="Type_master"><h1>Typemaster Keyboard</h1></div>
+                    <div id="Typemaster1" class="words">Improve your productivity and gaming without breaking the bank. Upgrade to a high quality mechanical typing experience.</div> 
+                    <div id="order">Pre-order now</div>
+                    <div id="order1">Release on 5/27</div>
+                    <div id="keyboard" style="margin-bottom:8vw"><img id="image" src="..\media\image-keyboard.jpg" alt="picture of keyboard" style="width:50%;   border-radius :2vw;"></div>
+    </div>
+            
          <div class="phone">   
             <div id="phone"><img  src="..\media\image-phone-and-keyboard.jpg" alt="picture of image-phone-and-keyboard.jpg" style="width:50%; fill: #F16718;"></div>
             <div id="glass"><img id="glass_k"  src="..\media\image-glass-and-keyboard.jpg" alt="picture of image-glass-and-keyboard.jpg" style="width:50%"></div>
         </div> 
         <div  class="mech">  
-            <div><h1 style="text-transform: capitalize;  font-size: xxx-large; text-align: center;">mechanical wireless Keyboard</h1></div>
-            <div  style="text-align:center ;   ">The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety of switches and keycaps, along with reliable wireless connectivity.</div>
+            <div><h2 style="text-transform: capitalize;  font-size: xxx-large; text-align: center;">mechanical wireless Keyboard</h2></div>
+            <div  style="text-align:center ;"  class="words">The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety of switches and keycaps, along with reliable wireless connectivity.</div>
         </div>
         <div> 
             <div class="icon"><img id="icon" src="..\media\monitor.svg" alt="picture of monitor icon"></div>
@@ -48,7 +47,7 @@
             <div class="icon_words"><h3>RGB BACKLIT MODES</h3></div>
             <div class="words">Choose from 4 backlight brightness levels and adjustable breathing speed. Each key glows intensely in the dark and helps you type in low light conditions.</div>
         </div>   
-            <div>Typemaster 2021  |  All Rights Reserved</div>
+            <div id="bottom" class="words">Typemaster 2021  |  All Rights Reserved</div>
             <div></div>
             
 
