repository to deploy

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="..\css\style.css" rel="stylesheet" type="text/css">
+    <link href="\css\style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div>
@@ -16,12 +16,12 @@
                     <div id="Typemaster1" class="words">Improve your productivity and gaming without breaking the bank. Upgrade to a high quality mechanical typing experience.</div> 
                     <div id="order">Pre-order now</div>
                     <div id="order1">Release on 5/27</div>
-                    <div id="keyboard" style="margin-bottom:8vw"><img id="image" src="..\media\image-keyboard.jpg" alt="picture of keyboard" style="width:50%;   border-radius :2vw;"></div>
+                    <div id="keyboard" style="margin-bottom:8vw"><img id="image" src="\media\image-keyboard.jpg" alt="picture of keyboard" style="width:50%;   border-radius :2vw;"></div>
     
            
          <div class="phone">   
-            <div id="phone"><img  src="..\media\orange-keyboard.svg" alt="picture of image-phone-and-keyboard.jpg" style="width:50%; fill: #F16718;"></div>
-            <div id="glass"><img id="glass_k"  src="..\media\image-glass-and-keyboard.jpg" alt="picture of image-glass-and-keyboard.jpg" style="width:50%"></div>
+            <div id="phone"><img  src="\media\orange-keyboard.svg" alt="picture of image-phone-and-keyboard.jpg" style="width:50%; fill: #F16718;"></div>
+            <div id="glass"><img id="glass_k"  src="\media\image-glass-and-keyboard.jpg" alt="picture of image-glass-and-keyboard.jpg" style="width:50%"></div>
         </div> 
         <div  class="mech">  
             <div><h2 style="text-transform: capitalize;  font-size: xxx-large; text-align: center;">mechanical wireless Keyboard</h2></div>
@@ -30,22 +30,22 @@
     </div>   
       <div class="container">
         <div id="monitor_icon"> 
-            <div class="icon"><img  src="..\media\monitor.svg" alt="picture of monitor icon"></div>
+            <div class="icon"><img  src="\media\monitor.svg" alt="picture of monitor icon"></div>
             <div class="icon_words"><h3>HIGHLY COMPATIBLE</h3></div>
             <div class="words">Easy to use and works well with all major computer brands, gaming consoles and mobile devices. Plug & play, no installation or driver needed.</div>
         </div>
         <div id="bluetooth_icon">   
-            <div class="icon"><img  src="..\media\bluetooth.svg" alt="picture of bluetooth icon"></div>
+            <div class="icon"><img  src="\media\bluetooth.svg" alt="picture of bluetooth icon"></div>
             <div class="icon_words"><h3>WIRELESS WITH BLUETOOTH</h3></div>
             <div class="words">Powerful 2.4G RF technology allows you to connect the cordless keyboard from up to 30ft away. Simply plug the unifying receiver into your computer.</div>
         </div> 
         <div id="battery_icon">   
-            <div class="icon"><img  src="..\media\battery.svg" alt="picture of battery icon"></div>
+            <div class="icon"><img  src="\media\battery.svg" alt="picture of battery icon"></div>
             <div class="icon_words"><h3>HIGH CAPACITY BATTERY</h3></div>
             <div class="words">Equipped with a long-lasting built-in battery, you’ll never have to spend a dime on replaceable ones. Enjoy 40 hours of usage time between charges.</div>
         </div> 
         <div id="bulb_icon"> 
-            <div class="icon"><img  src="..\media\bulb.svg" alt="picture of bulb icon"></div>
+            <div class="icon"><img  src="\media\bulb.svg" alt="picture of bulb icon"></div>
             <div class="icon_words"><h3>RGB BACKLIT MODES</h3></div>
             <div class="words">Choose from 4 backlight brightness levels and adjustable breathing speed. Each key glows intensely in the dark and helps you type in low light conditions.</div>
         </div> 
